# pytest-crap

./: .gitignore  README.md  changelog.md  contributing.md  license  pyproject.toml  readme.md
.github/workflows/: publish.yml  test.yml
pytest_crap/: __init__.py  calculator.py  mapper.py  plugin.py  reporter.py
stubs/radon/: __init__.pyi  complexity.pyi
tests/: conftest.py  test_calculator.py  test_init.py  test_integration.py  test_mapper.py  test_plugin.py  test_reporter.py
